--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/vue-fontawesome": "0.0.22",
-    "@mvpleung/flipclock": "0.0.4",
+    "@mvpleung/flipclock": "0.0.5",
     "amfe-flexible": "^2.2.1",
     "dragula": "^3.7.2",
     "element-ui": "^2.4.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "normalize.css": "^8.0.0",
+    "three": "^0.93.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-color": "^2.4.6",
