--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-color": "^2.4.6",
+    "vue-fullscreen": "^2.1.3",
     "vue-grid-layout": "^2.1.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
