--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "build:dll": "webpack --config build/webpack.dll.conf.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
@@ -31,10 +32,12 @@
     "vue-grid-layout": "^2.1.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4",
     "wilddog": "^2.5.17",
     "wildvue": "^1.1.1"
   },
   "devDependencies": {
+    "add-asset-html-webpack-plugin": "^2.1.3",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -83,7 +86,8 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "webpack-uglify-parallel": "^0.1.4"
   },
   "engines": {
     "node": ">= 6.0.0",
