--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-color": "^2.4.6",
     "vue-fullscreen": "^2.1.3",
     "vue-grid-layout": "^2.1.13",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
