--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "element-ui": "^2.4.1",
     "lodash": "^4.17.10",
     "normalize.css": "^8.0.0",
+    "socket.io-client": "^2.2.0",
     "three": "^0.93.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
@@ -31,10 +32,9 @@
     "vue-grid-layout": "^2.1.13",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
+    "vue-socket.io-extended": "^3.2.0",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4",
-    "wilddog": "^2.5.17",
-    "wildvue": "^1.1.1"
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "add-asset-html-webpack-plugin": "^2.1.3",
